src/snapshots/ebnf__parser__test__simple_alternation.snap
---
source: src/parser.rs
assertion_line: 274
expression: result
---
- "\n            filter ::= a | b;\n            a ::= 'a';\n            b ::= 'b';\n        "
- - lhs: filter
    rhs:
      Symbol:
        - Nonterminal: a
        - Alternation
        - Nonterminal: b
  - lhs: a
    rhs:
      Terminal: a
  - lhs: b
    rhs:
      Terminal: b
