src/snapshots/ebnf__parser__test__underscore.snap
---
source: src/parser.rs
assertion_line: 341
expression: result
---
- "\n             filter ::= a_b;\n             a_b ::= 'a' | 'b';\n        "
- - lhs: filter
    rhs:
      Nonterminal: a_b
  - lhs: a_b
    rhs:
      Symbol:
        - Terminal: a
        - Alternation
        - Terminal: b
